--- a/src/App.css
+++ b/src/App.css
@@ -6,19 +6,13 @@
   max-width: 1040px;
 }
 .App-logo {
-  height: 40vmin;
+  max-height: 100%;
   pointer-events: none;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
 .App-header {
   background-color: #282c34;
   min-height: 100px;
+  height: 200px;
   display: flex;
   flex-direction: column;
   align-items: center;
